# DnDGMod

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  README.md  SECURITY.md  mkdocs.yml  pyinstaller_launcher.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
dndgmod/: __init__.py  exceptions.py  export_presets.cfg  main.py
dndgmod/_templates/: CardEffectXXX.gd.j2  card_list_entry.j2  on_event.gd.j2  wait_for.gd.j2
dndgmod/_util/: find.py  progress.py  slug.py
dndgmod/dependencies/: gdre_tools.pck
dndgmod/pregex/: counterfeiter.py  room_list.py
dndgmod/subcommands/: compile.py  create.py  cycle.py  decompile.py  delete.py  init.py  open.py  open_.py  package.py  patch.py  revert.py  unpackage.py  upgrade.py
dndgmod/templates/: CardEffectXXX.gd.j2  card_art.png.import.j2  card_art_sprite_frames.tres.j2  card_effect_XXX.tres.j2  card_list_entry.j2  deck_list_entry.j2  encounter_list_entry.j2  on_event.gd.j2  opponent_art_sprite_frames.tres.j2  room_list_entry.j2  wait_for.gd.j2
dndgmod/util/: exceptions.py  files.py  logger.py  patch.py  progress.py  slug.py  spritesheet.py
dndgmod_gui/: __init__.py  __main__.py  about_window.py  lite.py  style.py
docs/: cards_yaml_format.md  description_keywords.md  index.md  requirements.txt
notes/: checklist.txt  effects.txt  encounters.txt  events.txt  font_update.txt  make_card.txt  relics.txt  starting_decks.txt
