[tool.poetry]
name = "dndgmod"
version = "0.4.4-post1"
description = "A Dungeons & Degenerate Gamblers Modloader"
authors = ["Seth Peace <sethevanpeace@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/TotallyNotSethP/DnDGMod"
documentation = "https://dndgmod.rtfd.io"
keywords = ["modding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.scripts]
dndgmod = "dndgmod.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pyyaml = "^6.0.2"
appdirs = "^1.4.4"
#dexsave = {version = "^0.1.0", optional = true}
jinja2 = "^3.1.3"
boto3 = "^1.34.158"
pregex = "^2.3.3"
pillow = "^10.4.0"
wget = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
dndgmod-onefile-bundled = {source = "pyinstaller_launcher.py", type = "onefile", bundle = true, windowed = true}
#dndgmod-onedir-bundled = {source = "pyinstaller_launcher.py", type = "onedir", bundle = true, windowed = true}

[tool.poetry-pyinstaller-plugin.include]
"dndgmod/templates/*" = "templates"
"dndgmod/assets/*" = "assets"